// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklogPage should display process reminder 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Mon CRA | 
    </title>
  </HelmetWrapper>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(Process) />
    <WithStyles(GridWrapper)
      item={true}
      md={4}
      xs={12}
    >
      <Connect(WithStyles(ReduxForm)) />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      md={8}
      xs={12}
    >
      <Connect(WithStyles(Calendar)) />
    </WithStyles(GridWrapper)>
    <WithStyles(Button)
      className=""
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</React.Fragment>
`;

exports[`WorklogPage should redirect if missing client info 1`] = `
<Redirect
  push={false}
  to="/client"
/>
`;

exports[`WorklogPage should render properly 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Mon CRA | 
    </title>
  </HelmetWrapper>
  <WithStyles(GridWrapper)
    container={true}
  >
    <WithStyles(GridWrapper)
      item={true}
      md={4}
      xs={12}
    >
      <Connect(WithStyles(ReduxForm)) />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      md={8}
      xs={12}
    >
      <Connect(WithStyles(Calendar)) />
    </WithStyles(GridWrapper)>
    <WithStyles(Button)
      className=""
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</React.Fragment>
`;
